add OpenAPI configuration with Swagger support and downgrade Spring Boot version to 3.3.4

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,9 @@ spring:
           lob:
             non_contextual_creation: true
     show-sql: true
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
