--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       minimum-idle: 2
   jpa:
     hibernate:
-      ddl-auto: update       # use 'validate' or migrations for prod
+      ddl-auto: create       # use 'validate' or migrations for prod
     properties:
       hibernate:
         format_sql: true
